Closed Bug 509449 Opened 15 years ago Closed 15 years ago

Minimized browser window restores during page loads

Categories

(Core :: Widget: Win32, defect, P2)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta2-fixed

People

(Reporter: alice0775, Assigned: jimm)

References

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.3pre) Gecko/20090810 Firefox/3.5.1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a2pre) Gecko/20090810 Minefield/3.6a2pre ID:20090810050215 Window minimizes to the Taskbar, but returns to previous(maximized or normal) state. Reproducible: Always Steps to Reproduce: 1. Start Minefield with new profile 2. Bookmarks > Select "Mozilla Firefox" > Right click > Open All in Tabs 3. Minimize window immediately (Before these pages finish loading) Actual Results: The browser window returns to previous size. Expected Results: The window remains minimized state. See, related discussion http://forums.mozillazine.org/viewtopic.php?p=7202835#p7202835 [Regression window] Fine: http://hg.mozilla.org/mozilla-central/rev/1c95611e9df3 Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090716 Minefield/3.6a1pre ID:20090716050957 Broken: http://hg.mozilla.org/mozilla-central/rev/ad2c0824b099 Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090717 Minefield/3.6a1pre ID:20090717045648 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=1c95611e9df3&tochange=ad2c0824b099
Keywords: regression
Version: unspecified → Trunk
Seems like a regression from bug 502713 - I wonder if bug 489258 might fix this.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Also happens on Vista and Win7 RC. Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2a2pre) Gecko/20090810 Minefield/3.6a2pre Firefox/3.6 (.NET CLR 3.5.30729) ID:20090810050215
Flags: blocking1.9.2?
Assignee: nobody → jmathies
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P2
This looks more like an issue with the focus manager, or maybe our Focus widget call which restores the window. It happens when the document finishes loading. Here's the call stack: gkwidget.dll!nsWindow::SetFocus(int aRaise=1) gklayout.dll!nsFocusManager::Focus(nsPIDOMWindow * aWindow=0x045dc300, nsIContent * aContent=0x00000000, unsigned int aFlags=0, int aIsNewDocument=1, int aFocusChanged=0, int aWindowRaised=0) gklayout.dll!nsFocusManager::WindowShown(nsIDOMWindow * aWindow=0x055fb060) gklayout.dll!nsGlobalWindow::SetReadyForFocus() gklayout.dll!nsGlobalWindow::SetReadyForFocus() gklayout.dll!PresShell::UnsuppressAndInvalidate() gklayout.dll!PresShell::UnsuppressPainting() gklayout.dll!PresShell::sPaintSuppressionCallback(nsITimer * aTimer=0x0ae518d8, void * aPresShell=0x056013c8)
Also, backing out bug 502713 doesn't fix the problem. I'm not sure that regression range is accurate. Reproducing it is a little tricky, I'll try and put together a test case.
What needs to happen to fix this is: 1. Check in the fix for bug 502123. 2. Change nsWindow::SetFocus to not restore when the aRaise argument is false. In fact, if aRaise is false and the window is minimized, the method should really just do nothing. Jim, want to try something like this?
Attached patch patch v.1Splinter Review
That looks to have addressed it. I fired off a cumulative patch to try for test runs.
Depends on: 502123
Summary: Minefield refusing to minimize--the browser keeps coming back up maximized/nomal state--while a page is loading → Minimized browser window restores during page loads
Attachment #403070 - Flags: review?(jmathies)
Attachment #403070 - Flags: review?(jmathies) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
waiting on approval for bug 502123 before this can land on branch.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: