Bug 509449 - Minimized browser window restores during page loads. r=jimm.